change path to image

--- a/Crime Analysis.ipynb
+++ b/Crime Analysis.ipynb
@@ -425,7 +425,7 @@
     "bottom = max(latitudes)\n",
     "right = min(longitudes)\n",
     "\n",
-    "datafile = cbook.get_sample_data('C:\\Users\\mzanc\\OneDrive\\Documents\\ML\\crime_data\\Seattle.jpg')\n",
+    "datafile = cbook.get_sample_data('Seattle.jpg')\n",
     "img = imread(datafile)\n",
     "fig=plt.figure(figsize=(18, 16), dpi= 80, facecolor='w', edgecolor='k')\n",
     "sale = plt.scatter(drug_sale_crime[:,x],drug_sale_crime[:,y], zorder=1, color='blue', label='Sale')\n",
@@ -503,7 +503,7 @@
    "outputs": [],
    "source": [
     "# Now to plot the new figure\n",
-    "datafile = cbook.get_sample_data('C:\\Users\\mzanc\\OneDrive\\Documents\\ML\\crime_data\\Seattle_Downtown.jpg')\n",
+    "datafile = cbook.get_sample_data('Seattle_Downtown.jpg')\n",
     "img = imread(datafile)\n",
     "fig=plt.figure(figsize=(20, 12), dpi= 80, facecolor='w', edgecolor='k')\n",
     "sale = plt.scatter(drug_sale_crime[:,x],drug_sale_crime[:,y], zorder=1, color='blue', label='Sale')\n",
